move blog wireframe link to comment

--- a/blog-template.html
+++ b/blog-template.html
@@ -36,9 +36,6 @@
     </section>
     <hr>
     <footer>Copyright stuff</footer>
-
-    <a href="imgs/wireframe-blogs.png">Click here to see blog wireframe</a>
-
 </body>
 
 </html>
@@ -63,4 +60,5 @@ navigate and view the site.
 4. What new semantic elements did you learn about (if any)?
 We used as many semantic elements as we could including <aside>, <section>, <header>, <footer>, and <date>.
 
+Link to view blog wireframe: https://github.com/billdevcode/billdevcode.github.io/blob/master/imgs/wireframe-blogs.png
 -->
