update index.html page using wireframe

--- a/index.html
+++ b/index.html
@@ -1,5 +1,57 @@
+<!DOCTYPE HTML>
 <html>
-  <body>
-      Hello DBC!
-  </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Bill's Website</title>
+</head>
+
+<body>
+<header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#about-me-page">About Me</a>
+            <a href="#projects">Projects</a>
+            <a href="blog/index.html" target="_blank">My Blog</a>
+        </nav>
+</header>
+<section id="home">
+        <h1>Welcome!</h1>
+</section>
+
+    <section id="about-me-page">
+        <h2>About Me</h2>
+        <section id="about-me-left">
+            <h4>Contact Me</h4>
+            <ul>
+                <li><a href="https://github.com/billdevcode" target="_blank">Github</a></li>
+            </ul>
+        </section>
+
+        <section id="about-me-right">
+            <h4>Bill Deng</h4>
+            <img src="#" alt="Picture of Bill">
+            <p>
+                Hello I'm Bill and I am attending Dev Bootcamp's 19-weeks Full-Stack Web Developer program. During the 19-weeks, I will have an opportunity to collaborate with highly motivated and energetic people just like myself. It's going to be a life-changing experience and I'm looking forward to it.
+            </p>
+            <p>
+                This site is a work-in-progress and will serve as a showcase for my weekly blogs and projects. I will be adding more and more features each week as the program moves forward.
+            </p>
+        </section>
+    </section>
+
+    <section id="projects">
+        <h3>My Projects</h3>
+        <a href="#" target="_blank"><img src="#" alt="#"><span>Project 1</span></a>
+        <a href="#" target="_blank"><img src="#" alt="#"><span>Project 2</span></a>
+        <a href="#" target="_blank"><img src="#" alt="#"><span>Project 3</span></a>
+    </section>
+
+    <footer>
+        <p>
+            Built with HTML and coffee
+        </p>
+    </footer>
+</body>
+
 </html>
