--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <ul class="navbar">
       <li class="navbar"><a href="blog/index.html" target="_blank">Blog</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li> <a href="#about">About</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="index.html">Home</a></li>
     </ul>
   </nav>
 
