--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           experience and I'm looking forward to it.
         </p>
         <p>
-          This site is a work-in-progress and will serve as a showcase for my weekly blogs and projects. I will add new features each week while I go through this journey.
+          This site is a work-in-progress and will serve as a showcase for my weekly blogs and projects. I will add new features while I go through this journey.
         </p>
 
       </div>
