add mailto button

--- a/index.html
+++ b/index.html
@@ -32,14 +32,9 @@
       <div class="about-left about-me">
         <h4 class="contact-me-h4">Contact Me</h4>
         <ul>
-          <li>
-            <p>
-              billyd2013@gmail.com
-            </p>
-            <br>
-          </li>
+          <li><a href="mailto:billyd2013@gmail.com"><i class="fa fa-envelope"></i><br>billyd2013@gmail.com</a></li>
 
-          <li><a href="https://github.com/billdevcode" target="_blank"><i class="fa fa-github"></i><br>Github</a></li>
+          <li><br><a href="https://github.com/billdevcode" target="_blank"><i class="fa fa-github"></i><br>Github</a></li>
 
           <li><br><a href="https://www.linkedin.com/in/dengbilly" target="_blank"><i class="fa fa-linkedin-square"></i><br>LinkedIn</a></li>
         </ul>
