--- a/blog-template-new.html
+++ b/blog-template-new.html
@@ -12,10 +12,6 @@
 
 <body>
 
-    <header>
-        <h3>Bill's Technical Blog</h3>
-    </header>
-
     <div class="outer-div">
         <div class="inner-left">
             <aside id="sidebar-fixed">
@@ -30,8 +26,7 @@
 
         <div class="inner-right">
             <main>
-                <section id="main-content">
-                    <h1>Heading 1</h1>
+                    <h1>Blog Title</h1>
                     <p>
                         Date
                     </p>
@@ -43,9 +38,9 @@
                     <section>
 
                         <h2>Heading 2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
-
-                        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. </p>
+                            <p>
+                                Some text here
+                            </p>
                     </section>
 
                     <div class="blog-img-div">
@@ -53,17 +48,11 @@
                     </div>
                     <section>
                         <h2>Heading 2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </p>
-
-                        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. </p>
-
+                            <p>
+                                Some text here
+                            </p>
                     </section>
-                </section>
             </main>
-        </div>
-        <div class="bottom-buttons">
-            <a href="#"><i class="fa fa-arrow-left"></i> Previous</a>
-            <a href="#">Next <i class="fa fa-arrow-right"></i></a>
         </div>
     </div>
 
