--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
   <nav>
     <ul class="navbar">
-      <li class="navbar"><a href="blog/index.html" target="_blank">Blog</a></li>
+      <li><a href="blog/index.html" target="_blank">Blog</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#about">About</a></li>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="#home">Home</a></li>
     </ul>
   </nav>
 
-  <div class="home">
+  <div id="home">
     <section>
       <h1>Welcome!</h1>
     </section>
