update about me section

--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
         <h4>Bill Deng</h4>
         <img src="imgs/bill-picture.jpg" alt="Picture of Bill">
         <p class="first-p">
-          Hello my name is Bill and I'm attending Dev Bootcamp's 19-weeks Full-Stack Web Developer program. During this 19-weeks, I have an opportunity to collaborate with highly motivated and energetic people just like myself. It's going to be a life-changing
-          experience and I'm looking forward to it.
+          Hello my name is Bill. I'm currently living in San Francisco and attending Dev Bootcamp's 19-weeks 
+          Full-Stack Web Developer program. During this 19-weeks, I have an opportunity to collaborate with 
+          highly motivated and energetic people just like myself. It's going to be a life-changing experience 
+          and I'm looking forward to it.
         </p>
         <p>
-          This site is a work-in-progress and will serve as a showcase for my weekly blogs and projects. I will add new features while I go through this journey.
+          This site is a work-in-progress and will serve as a showcase for my weekly blogs and projects. 
+          I will add new features while I go through this journey.
         </p>
 
       </div>
