Add random quotes project

--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="cheat-sheet.css">
+    <link rel="stylesheet" type="text/css" href="cheat-sheet/cheat-sheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <title>Ruby Cheat Sheet</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
 
     <div class="img-div">
-        <img src="ruby-logo.png" alt="Ruby Logo">
+        <img src="cheat-sheet/ruby-logo.png" alt="Ruby Logo">
     </div>
     
     <h1>Ruby Cheatsheet: Hashes, Arrays, Strings and Integers</h1>
