--- a/projects/pomodoro-clock/index.html
+++ b/projects/pomodoro-clock/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 
 <head>
-
+  <title>Pomodoro Tomato Clock</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css">
