--- a/projects/javascript-calculator/index.html
+++ b/projects/javascript-calculator/index.html
@@ -4,6 +4,7 @@
 
 <head>
   <title>JavaScript Calculator</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
