--- a/projects/random-quotes/index.html
+++ b/projects/random-quotes/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <title>Random Quot</title>
+  <title>Random Quote</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,6 +30,7 @@
   </div>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="src/app.js"></script>
+  <script src="src/quotes.js"></script>
 </body>
 
 </html>
