--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="stylesheets/portfolio.css">
+        <link rel="stylesheet" href="stylesheets/stylesheet.css">
     </head>
 
     <body>
