Add email address

--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@
       </div>
 
       <div id="contact" class="container-fluid">
-        <h3>Contact me</h3>
+        <h3>Contact me: <a href="mailto:billdevcode@gmail.com"><i class="fa fa-envelope"></i> billdevcode@gmail.com</a></h3>
         <a href="https://www.linkedin.com/in/billdevcode" target="_blank" alt="LinkedIn"><img src="imgs/linkedin-icon.png" width="50" height="50" class="img-circle"></a>
         <a href="https://github.com/billdevcode" target="_blank" alt="Github"><img src="imgs/github-icon.png" width="50" height="50" class="img-circle"></a>
-        <a href="https://www.freecodecamp.com/kirah1314" target="_blank" alt="freeCodeCamp"><img src="imgs/FCC-icon.png" width="50" height="50" class="img-circle"></a>
       </div>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </body>
