Add box around project links and improve UI

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
 
       <nav id="navbar" class="nav navbar-inverse navbar-fixed-top">
-        <div class="container">
+        <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     </button>
@@ -44,72 +44,56 @@
         <div class="container-fluid zip-quote">
           <div class="box textbox-quote">
             <h2>Random Quote Machine</h2>
-            <p>
-              <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/random-quotes" target="_blank" class="buttons" role="button">Learn More ></a>
-            </p>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/random-quotes" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-calculator">
           <div class="box textbox-calculator">
             <h2>JavaScript Calculator</h2>
-            <p>
-              <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/javascript-calculator" target="_blank" class="buttons" role="button">Learn More ></a>
-            </p>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/javascript-calculator" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-clock">
           <div class="box textbox-clock">
             <h2>Pomodoro Clock</h2>
-            <p>
-              <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/pomodoro-clock" target="_blank" class="buttons" role="button">Learn More ></a>
-            </p>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/pomodoro-clock" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-twitch">
           <div class="box textbox-twitch">
             <h2>Twitch.tv JSON API</h2>
-            <p>
-              <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/twitchTV" target="_blank" class="buttons" role="button">Learn More ></a>
-            </p>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/twitchTV" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid react-fcc-leaderboard">
           <div class="box textbox-fcc-leaderboard">
             <h2>Camper Leaderboard</h2>
-            <p>
-              <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/fcc-leaderboard" target="_blank" class="buttons" role="button">Learn More ></a>
-            </p>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/fcc-leaderboard" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-wiki">
           <div class="box textbox-wiki">
             <h2>Wikipedia Viewer</h2>
-            <p>
-              <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/wikipedia-viewer" target="_blank" class="buttons" role="button">Learn More ></a>
-            </p>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/wikipedia-viewer" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-tic-tac-toe">
           <div class="box textbox-tic-tac-toe">
             <h2>Tic-Tac-Toe Game</h2>
-            <p>
-              <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/tic-tac-toe" target="_blank" class="buttons" role="button">Learn More ></a>
-            </p>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/tic-tac-toe" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-simon">
           <div class="box textbox-simon">
             <h2>Simon Game</h2>
-            <p>
-              <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/simon-game" target="_blank" class="buttons" role="button">Learn More ></a>
-            </p>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/simon-game" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
