Add maps-locations to portfolio

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
       </div>
 
       <div class="portfolio" id="portfolio">
+
+      <div class="container-fluid maps-locations">
+          <div class="box textbox-maps">
+            <h2>Google Places API</h2>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/maps-locations" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+          </div>
+        </div>
+
         <div class="container-fluid zip-quote">
           <div class="box textbox-quote">
             <h2>Random Quote Machine</h2>
