Add link to live sites on portfolio page

--- a/index.html
+++ b/index.html
@@ -45,63 +45,72 @@
       <div class="container-fluid maps-locations">
           <div class="box textbox-maps">
             <h2>Google Places API</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/maps-locations" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/maps-locations/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/maps-locations" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-quote">
           <div class="box textbox-quote">
             <h2>Random Quote Machine</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/random-quotes" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/random-quotes/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/random-quotes" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-calculator">
           <div class="box textbox-calculator">
             <h2>JavaScript Calculator</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/javascript-calculator" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/javascript-calculator/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>  
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/javascript-calculator" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-clock">
           <div class="box textbox-clock">
             <h2>Pomodoro Clock</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/pomodoro-clock" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/pomodoro-clock/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/pomodoro-clock" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-twitch">
           <div class="box textbox-twitch">
             <h2>Twitch.tv JSON API</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/twitchTV" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/twitchTV/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/twitchTV" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid react-fcc-leaderboard">
           <div class="box textbox-fcc-leaderboard">
             <h2>Camper Leaderboard</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/fcc-leaderboard" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/fcc-leaderboard/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/fcc-leaderboard" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-wiki">
           <div class="box textbox-wiki">
             <h2>Wikipedia Viewer</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/wikipedia-viewer" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/wikipedia-viewer/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/wikipedia-viewer" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-tic-tac-toe">
           <div class="box textbox-tic-tac-toe">
             <h2>Tic-Tac-Toe Game</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/tic-tac-toe" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/tic-tac-toe/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/tic-tac-toe" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
 
         <div class="container-fluid zip-simon">
           <div class="box textbox-simon">
             <h2>Simon Game</h2>
-            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/simon-game" target="_blank" class="buttons" role="button">Learn More <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://billdevcode.github.io/projects/simon-game/index.html" target="_blank" class="buttons" role="button">See it live <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+            <a href="https://github.com/billdevcode/billdevcode.github.io/tree/master/projects/simon-game" target="_blank" class="buttons right-button" role="button">See codes <i class="fa fa-code" aria-hidden="true"></i></a>
           </div>
         </div>
       </div>
